tests/neg/i23459b.scala
case class Test()

@main def test =
  Test() match
    case Test(x*) => () // error
  Test() match
    case Test(_*) => () // error
